--- a/requirements.txt
+++ b/requirements.txt
@@ -92,7 +92,7 @@ smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
-streamlit==1.31.1
+streamlit==1.35.0
 StrEnum==0.4.15
 tenacity==8.2.3
 threadpoolctl==3.4.0
@@ -113,4 +113,4 @@ Werkzeug==3.0.1
 wikipedia==1.4.0
 wsproto==1.2.0
 zipp==3.17.0
-imbalanced-learn
+imbalanced-learn==0.12.3
